--- a/index.html
+++ b/index.html
@@ -230,6 +230,53 @@
       </div>
     </section>
 
+    <!-- ============================
+     FINANCE RELATED PROJECT
+     Billing Loss Prediction Dashboard
+=============================== -->
+<section class="max-w-6xl mx-auto px-6 mt-16 fade-section">
+  
+  <h2 class="text-2xl md:text-3xl font-semibold neon-text mb-6">
+    Finance Related Project
+  </h2>
+
+  <div class="rounded-2xl p-6 glass neon-border">
+
+    <h3 class="text-xl font-semibold text-neon mb-3">
+      Billing Loss Prediction Dashboard
+    </h3>
+
+    <p class="text-slate-300 text-sm leading-relaxed mb-4">
+      This project identifies <strong>unbilled hours and revenue leakage</strong>
+      in a service-based company by analyzing employee, project, and
+      timesheet data. The dashboard highlights financial loss by employee,
+      project, department, and reason code with clear KPIs and visuals.
+    </p>
+
+    <p class="text-slate-300 text-sm leading-relaxed mb-4">
+      AI-driven capabilities such as <strong>forecasting, key influencers,
+      smart narrative, and what-if simulation</strong> help uncover root causes
+      and predict future loss. This solution reduces manual reporting,
+      improves visibility, and promotes faster, data-driven financial decisions.
+    </p>
+
+    <!-- PROJECT VIDEO -->
+    <video
+      class="finance-project-video"
+      playsinline
+      preload="auto"
+      controls
+    >
+      <source src="Media.webm" type="video/webm">
+      
+      Your browser does not support HTML5 video.
+    </video>
+
+  </div>
+</section>
+
+
+
     <!-- MACHINE LEARNING PROJECTS -->
     <section id="ml-projects" class="max-w-6xl mx-auto px-6 mt-16">
       <h2 class="section-heading text-2xl md:text-3xl font-semibold neon-text">Machine Learning Projects</h2>
