--- a/index.html
+++ b/index.html
@@ -77,8 +77,16 @@
         <a href="#streamlit" class="nav-link-mobile">Streamlit Apps</a>
         <a href="#certificates" class="nav-link-mobile">Certificates</a>
         <a href="#contact" class="nav-link-mobile">Contact</a>
-        <a href="Shaik Kareem Basha.pdf" download class="mt-4 px-3 py-2 rounded-lg bg-neon text-black text-sm inline-block">Resume</a>
-      </nav>
+       <a href="Shaik Kareem Basha.pdf" target="_blank"
+   class="ml-3 px-3 py-2 rounded-lg bg-[#0a2b38] border border-[#08323f] text-sm">
+   View Resume
+</a>
+
+<a href="Shaik Kareem Basha.pdf" download
+   class="ml-3 px-3 py-2 rounded-lg bg-neon text-black text-sm">
+   Download Resume
+</a>
+
     </div>
   </div>
 
@@ -111,6 +119,11 @@
           <a href="https://www.linkedin.com/in/kareembashaanalyst/" target="_blank" class="px-4 py-3 rounded-xl bg-[#0a2b38] border border-[#08323f] flex items-center gap-2">
             <i class="fab fa-linkedin text-neon"></i> Connect
           </a>
+          <a href="Shaik Kareem Basha.pdf" target="_blank"
+   class="px-4 py-3 rounded-xl border border-[#08323f]">
+   View Resume
+</a>
+
           <a href="Shaik Kareem Basha.pdf" download class="px-4 py-3 rounded-xl border border-[#08323f]">Download Resume</a>
         </div>
 
