--- a/index.html
+++ b/index.html
@@ -149,6 +149,103 @@
       </div>
     </section>
 
+    <!-- skills  -->
+
+   <section id="skills-universe" class="solar-section">
+ <h2 class="solar-title">All My Skills Revolve Around One Core</h2>
+<p class="solar-subtitle">Every tool, every technology, every capability — aligned to solve business problems with data and AI.</p>
+
+
+  <div class="solar-3d-wrapper">
+    <div class="solar-system-3d">
+      <!-- SUN -->
+      <div class="sun-3d">
+        <span>AI-Powered<br>Decision Intelligence</span>
+      </div>
+
+      <!-- Python Planet -->
+      <div class="planet-orbit orbit-python">
+        <div class="planet-system planet-python">
+          <div class="planet-main">
+            <i class="devicon-python-plain colored"></i>
+            <span>Python</span>
+          </div>
+          <div class="moon-belt">
+            <span class="moon-chip">Pandas</span>
+            <span class="moon-chip">NumPy</span>
+            <span class="moon-chip">Matplotlib</span>
+            <span class="moon-chip">Seaborn</span>
+            <span class="moon-chip">Scikit-Learn</span>
+            <span class="moon-chip">Colab</span>
+          </div>
+        </div>
+      </div>
+
+      <!-- SQL Planet -->
+      <div class="planet-orbit orbit-sql">
+        <div class="planet-system planet-sql">
+          <div class="planet-main">
+            <i class="devicon-mysql-plain colored"></i>
+            <span>SQL</span>
+          </div>
+          <div class="moon-belt">
+            <span class="moon-chip">Joins</span>
+            <span class="moon-chip">Window Fn</span>
+            <span class="moon-chip">MySQL</span>
+            <span class="moon-chip">Optimization</span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Power BI Planet -->
+      <div class="planet-orbit orbit-powerbi">
+        <div class="planet-system planet-powerbi">
+          <div class="planet-main">
+            <span class="planet-text">Power BI</span>
+          </div>
+          <div class="moon-belt">
+            <span class="moon-chip">DAX</span>
+            <span class="moon-chip">Power Query</span>
+            <span class="moon-chip">Excel</span>
+          </div>
+        </div>
+      </div>
+
+      <!-- AI Tools Planet -->
+      <div class="planet-orbit orbit-ai">
+        <div class="planet-system planet-ai">
+          <div class="planet-main">
+            <span class="planet-text">AI Tools</span>
+          </div>
+          <div class="moon-belt">
+            <span class="moon-chip">ChatGPT</span>
+            <span class="moon-chip">Copilot</span>
+            <span class="moon-chip">Prompt Eng</span>
+            <span class="moon-chip">Automation</span>
+          </div>
+        </div>
+      </div>
+
+      <!-- DevTools Planet -->
+      <div class="planet-orbit orbit-dev">
+        <div class="planet-system planet-dev">
+          <div class="planet-main">
+            <i class="devicon-vscode-plain colored"></i>
+            <span>DevTools</span>
+          </div>
+          <div class="moon-belt">
+            <span class="moon-chip">VS Code</span>
+            <span class="moon-chip">Git</span>
+            <span class="moon-chip">GitHub</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
     <!-- Separator -->
     <div class="max-w-6xl mx-auto px-6 mt-12 border-t border-slate-800"></div>
 
@@ -527,5 +624,8 @@
 
   <!-- Script -->
   <script src="script.js" defer></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+
+
 </body>
 </html>
